fix modal centering & maybe fix overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,11 +66,15 @@
     }
 }
 } */
+.layout {
+    overflow-x: hidden !important;
+}
 
 .context {
     width: 100%;
     position: absolute;
     top: 50vh;
+    overflow-x: hidden;
 }
 
 .context h1 {
@@ -82,6 +86,7 @@
 .area {
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .circles {
